# ls

./: .gitmodules  CMakeLists.txt  README.md  main.c
includes/: array.h  errors.h  file.h  list.h  parse_args.h  permission.h  sort_files.h  utils.h
sources/: CMakeLists.txt  array.c  file.c  list.c  main.c  parse_args.c  permission.c  sort_files.c  utils.c
test/: CMakeLists.txt  test.c
